--- a/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
+++ b/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
@@ -23,7 +23,7 @@
 
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h1 class="h3 mb-0 text-gray-800">Generate Report</h1>
+                    <h1 class="h3 mb-0 text-gray-800">Tracking</h1>
 
                 </div>
                 <!-- picture_as_pdf -->
