--- a/src/app/campus/campus.component.html
+++ b/src/app/campus/campus.component.html
@@ -21,8 +21,8 @@
         <button mat-menu-item>Get Your cetificate  
             <mat-icon>assignment_turned_in</mat-icon>
         </button>
-        <button mat-menu-item>Campus Directions 
-            <mat-icon>info</mat-icon>
+        <button (click)="campDirection()" mat-menu-item>Campus Directions 
+            <mat-icon>room</mat-icon>
         </button>
         <button (click)="blog()" mat-menu-item>Blog  
             <mat-icon>view_agenda</mat-icon>
