--- a/src/app/campus/campus.component.html
+++ b/src/app/campus/campus.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header>
+    <mat-progress-bar  style="height: 1%; " mode="determinate" value={{progressbarVal}}></mat-progress-bar>
+</app-header>
 
 <!-----------------------------------------------------------------------------Header-->
 <div class="hero-image">
@@ -8,7 +10,7 @@
     </div>
 </div>
 <!-- <h6></h6> -->
-<mat-progress-bar  style="height: 1%; " mode="determinate" value={{progressbarVal}}></mat-progress-bar>
+
 
 <div class="example-button-container" style="position: fixed; margin-top: 25%; margin-left: 90%;z-index: 5;">
     <button mat-button [matMenuTriggerFor]="menu" mat-fab style="background-color: #0d4794;" aria-label="Example icon button with a home icon">
