--- a/src/app/student/mapdir/mapdir.component.html
+++ b/src/app/student/mapdir/mapdir.component.html
@@ -4,11 +4,10 @@
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
 <mat-button-toggle-group style="margin: 2%;" name="fontStyle" aria-label="Font Style">
-    <mat-button-toggle  *ngFor="let campus of allCampuses">{{campus.campus_name}}</mat-button-toggle>
-    
+    <mat-button-toggle  *ngFor="let campus of allCampuses" (click)="clickCampus(campus.campus_name,campus.campus_coords)">{{campus.campus_name}}</mat-button-toggle>   
 </mat-button-toggle-group>
 
 
-<agm-map [zoom]="16" [latitude]="lat" [longitude]="lng">
+<agm-map [zoom]="zoomVar" [latitude]="lat" [longitude]="lng">
   <agm-marker *ngFor="let campus of allCampuses, let i = index" [latitude]="all_lat_marker[i]" [longitude]="all_lng_marker[i]"></agm-marker>
 </agm-map>
