--- a/src/app/campus/campus.component.html
+++ b/src/app/campus/campus.component.html
@@ -29,7 +29,7 @@
         <button (click)="blog()" mat-menu-item>Blog  
             <mat-icon>view_agenda</mat-icon>
         </button>
-        <button mat-menu-item>About Us  
+        <button (click)="meeteam()" mat-menu-item>Meet the team  
             <mat-icon>info</mat-icon>
         </button>
         <button (click)="logout()" mat-menu-item>Logout  
