--- a/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
+++ b/src/app/admin/sideTabs/tracking-st/tracking-st.component.html
@@ -14,9 +14,11 @@
             <app-topbar></app-topbar>
 
             <!-- Sidebar Toggle (Topbar) -->
-            <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
+
+                
 
             <!-- Begin Page Content -->
             <div class="container-fluid">
@@ -24,10 +26,20 @@
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Tracking</h1>
-
+                    
+                        
                 </div>
                 <!-- picture_as_pdf -->
+                
+
+                <mat-form-field appearance="outline" style="width: 30%;">
+                    <mat-label>Search</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. 217070" #input>
+                    <mat-icon matSuffix>search</mat-icon>
+                </mat-form-field>
+
                 <div class="row">
+                    
                     <label>Filtering</label>
                     <mat-form-field style="width: 5%;" appearance="outline">
                         <input matInput placeholder="no" [(ngModel)]="filterEntity.id">
@@ -53,8 +65,6 @@
                     </mat-form-field>
 
                     <!--  -->
-
-
                 </div>
 
 
@@ -63,12 +73,8 @@
 
                         <!-- Position Column -->
                         <ng-container matColumnDef="id">
-
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> No.
-
-                            </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
                             <td mat-cell *matCellDef="let element"> {{element.id}}</td>
-
                         </ng-container>
 
 
@@ -104,6 +110,11 @@
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                        <!-- Row shown when there is no matching data. -->
+                        <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                        </tr>
                     </table>
 
                     <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" [length]="100" [pageSize]="10" style="margin-bottom: 5%;"></mat-paginator>
