--- a/src/app/admin/survey-responses/survey-responses.component.html
+++ b/src/app/admin/survey-responses/survey-responses.component.html
@@ -28,14 +28,20 @@
                         <mat-icon style="position: absolute;">picture_as_pdf</mat-icon>
                         <span style="margin-left: 30px;">Quick Generate Report</span>
                     </a>
+                    
                 </div>
+                <mat-form-field appearance="outline" style="width: 30%;">
+                    <mat-label>Search</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. 217070" #input>
+                    <mat-icon matSuffix>search</mat-icon>
+                </mat-form-field>
                 <!-- picture_as_pdf -->
                 <div class="container">
                     <table mat-table
                             [dataSource]="dataSource" multiTemplateDataRows
                             class="mat-elevation-z8">
                         <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-                            <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+                            <th mat-header-cell *matHeaderCellDef > {{column}} </th>
                             <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
                         </ng-container>
 
@@ -44,13 +50,16 @@
                             <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
                             <div class="example-element-detail"
                                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                                <label style="margin-right: 2%;">Survey</label>
+                                
+                                <br>
                                 <div class="row">
-                                    <h6 *ngFor="let eachsurvey of element.survey">{{eachsurvey.question}} : {{eachsurvey.answer}}</h6>
+                                    <label style="margin-right: 2%; margin-bottom: 3%; font-size: large;">Survey</label>
+                                    <label *ngFor="let eachsurvey of element.Survey">{{eachsurvey.question}} : <label style="font-weight: 500;color: rgb(12, 197, 12)">{{eachsurvey.answer}}</label></label>
                                 </div>
                             </div>
                             </td>
                         </ng-container>
+
 
                         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
                         <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
