--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -143,7 +143,7 @@
 
                 <!--------------------------------------------------------------------------Cards Stats------------------------------------------------------------------------->
 
-                <div class="row">
+                <div class="row" style="display: none;">
 
                     <!-- Pie Chart -->
                     <div class="col-xl-4 col-lg-2">
