--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link" routerLink="./" >Home |</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="./blog">Blog </a>
+            <a class="nav-link" routerLink="/blog">Blog </a>
           </li>
         </ul>
         
