--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -21,9 +21,9 @@
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
                     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                    <a routerLink="/dashboard" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-                        <mat-icon style="position: absolute;">picture_as_pdf</mat-icon>
-                        <span style="margin-left: 30px;">Quick Generate Report</span>
+                    <a (click)="upload()" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                        <mat-icon style="position: absolute;">autorenew</mat-icon>
+                        <span style="margin-left: 30px;">Refresh Analytics</span>
                     </a>
                 </div>
 
@@ -143,7 +143,7 @@
 
                 <!--------------------------------------------------------------------------Cards Stats------------------------------------------------------------------------->
 
-                <div class="row" style="display: none;">
+                <div class="row">
 
                     <!-- Pie Chart -->
                     <div class="col-xl-4 col-lg-2">
