--- a/src/app/admin/sideTabs/upload-content/upload-content.component.html
+++ b/src/app/admin/sideTabs/upload-content/upload-content.component.html
@@ -15,19 +15,50 @@
 
             <!-- Sidebar Toggle (Topbar) -->
             <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                    <i class="fa fa-bars"></i>
-                </button>
+                <i class="fa fa-bars"></i>
+            </button>
 
             <!-- Begin Page Content -->
             <div class="container-fluid">
 
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h1 class="h3 mb-0 text-gray-800">Upload Content 1</h1>
-                   
+                    <h1 class="h3 mb-0 text-gray-800">Upload Content</h1>
                 </div>
                 <!-- picture_as_pdf -->
-               
+
+                <!-- Area Chart -->
+                <div class="row">
+                    <div class="col-xl-6 col-lg-20">
+                        <div class="card shadow mb-2">
+                            <!-- Card Header - Dropdown -->
+                            <div class="card-header py-4 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-primary">Upload Faculty Video</h6>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                <div class="chart-area">
+                                
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-6 col-lg-10">
+                        <div class="card shadow mb-7">
+                            <!-- Card Header - Dropdown -->
+                            <div class="card-header py-4 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-primary">Post a blog</h6>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                <div class="chart-area">
+           
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
